[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="Control" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Panel" type="Panel" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 359.0
margin_top = 146.0
margin_right = 695.0
margin_bottom = 397.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor" ]

[node name="Container" type="Container" parent="Panel"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 89.0
margin_top = 61.0
margin_right = 277.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ip" type="TextEdit" parent="Panel/Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 81.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
smooth_scrolling = false
v_scroll_speed = 80.0
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Caret", "Hint" ]

[node name="connect" type="Button" parent="Panel/Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 13.0
margin_right = 188.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "connect"
flat = false

[node name="Container2" type="Container" parent="Panel"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 89.0
margin_top = 123.0
margin_right = 277.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="name" type="TextEdit" parent="Panel/Container2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 81.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
smooth_scrolling = false
v_scroll_speed = 80.0
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Caret", "Hint", "custom_constants" ]

[node name="host" type="Button" parent="Panel/Container2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 13.0
margin_right = 188.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "host"
flat = false

[node name="sp" type="Button" parent="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 127.0
margin_top = 193.0
margin_right = 223.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start SP"
flat = false

[node name="DialogWaiting" type="Panel" parent="Panel"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_top = 47.0
margin_right = 306.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Material", "Popup", "Size Flags" ]

[node name="cancel" type="Button" parent="Panel/DialogWaiting"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_top = 86.0
margin_right = 161.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "cancel"
flat = false

[node name="Label" type="Label" parent="Panel/DialogWaiting"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_top = 22.0
margin_right = 239.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "wating for players..."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Panel/Container/connect" to="." method="_on_connect_pressed"]

[connection signal="pressed" from="Panel/Container2/host" to="." method="_on_host_pressed"]

[connection signal="pressed" from="Panel/sp" to="." method="_on_sp_pressed"]

[connection signal="pressed" from="Panel/DialogWaiting/cancel" to="." method="_on_cancel_pressed"]


